<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.calculator.CalculatorActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/calculator_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/calculator_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_calc_bar_layout"
        android:layout_below="@+id/calculator_toolbar_layout">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/plate_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@+id/button_calc_bar_layout"
        android:background="#000" />

    <LinearLayout
        android:id="@+id/button_calc_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/window_white"
        android:orientation="horizontal"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingBottom="4dp"
        android:weightSum="1"
        android:baselineAligned="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/discount_title"
                android:textAlignment="viewEnd"
                android:textColor="@color/text_gray"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/plate_discount_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/plate_discount_prefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plate_discount_prefix"
                    android:textColor="@color/text_accent"
                    android:textSize="@dimen/plate_bottom_text_size"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/plate_discount_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:drawableEnd="@drawable/ic_percent"
                    android:textColor="@color/text_accent"
                    android:textSize="@dimen/plate_bottom_text_size"
                    tools:text="20" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="vertical"
            android:paddingEnd="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/plate_bottom_total"
                android:textAlignment="viewEnd"
                android:textColor="@color/text_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/plate_total_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textColor="@color/text_accent"
                android:textSize="@dimen/plate_bottom_text_size"
                tools:text="£99.98" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>

