<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="16dp">

    <TextView
        style="@style/DialogTheme.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_discount_title" />

    <TextView
        style="@style/DialogTheme.Message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_discount_message" />

    <EditText
        android:id="@+id/dialog_discount_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_plate_discount"
        android:inputType="number"
        android:maxLength="2"
        android:selectAllOnFocus="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_discount_cancel"
            style="@style/DialogTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel" />

        <Button
            android:id="@+id/dialog_discount_save"
            style="@style/DialogTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_save" />
    </LinearLayout>


</LinearLayout>