...
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="24sp"
                tools:text="1" />

            <ImageView
                android:id="@+id/plate_plus"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_gravity="center"
                android:contentDescription="@string/plus_plate"
                android:src="@drawable/ic_plus" />
        </LinearLayout>
...
