...
    <string name="plate_bottom_total">Total:</string>
    <string name="plus_plate">Plus Plate</string>

    <string name="nav_plate_calculator">Plate Calculator</string>
    <string name="nav_settings">Settings</string>

    <string name="menu_clear_all">Clear All</string>

    <string name="toolbar_settings_title">Settings</string>



    <string name="pref_first_opened">pref_first</string>
...
